# quest-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
games/: test_game.json  test_game.ni  test_game.ulx
notebooks/: 01_palyground.ipynb
resources/: instructions.mustache
src/questagent/: agents.py  cli.py
